# kosync-rs

./: .env  Cargo.toml  metadataexaplefile  todo.md
migrations/: 20230630021154_user.sql  20230630032647_pgcrypto.sql
src/: main.rs
