[package]
name = "kosync-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["headers"]}
color-eyre = "0.6.2"
serde = {version = "1.0.164", features = ["derive"] }
tokio = { version = "1.29.0", features = ["full"] }
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
